--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,17 +1,21 @@
 {
     "name": "DevGib",
     "version": "0.0.1",
+    "manifest_version": 2,
     "description": "Analyze the quality of dev-related links before accessing them",
     "icons": {
-        "16": "assets/icon16.png",
-        "48": "assets/icon48.png",
-        "128": "assets/icon128.png" },
-    "background_page": "extension.html",
+        "16": "assets/icons/icon16.png",
+        "48": "assets/icons/icon48.png",
+        "128": "assets/icons/icon128.png" },
     "content_scripts": [{
         "matches": ["<all_urls>"],
-        "js": ["page/gitgib_ui.js", "page/page.js"],
         "run_at": "document_start",
-        "css": ["page/page.css"]
+        "js": [
+            "http://code.jquery.com/jquery-2.0.3.min.js", "src/index.js"
+        ],
+        "css": [
+            "assets/stylesheets/index.css"
+        ]
     }],
     "minimum_chrome_version": "15",
     "permissions": [
