--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -11,7 +11,8 @@
         "matches": ["<all_urls>"],
         "run_at": "document_start",
         "js": [
-            "http://code.jquery.com/jquery-2.0.3.min.js", "src/index.js"
+            "lib/jquery-2.0.3.min.js",
+            "src/index.js"
         ],
         "css": [
             "assets/stylesheets/index.css"
