--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
     "devDependencies": {
         "grunt": "~0.4.2",
         "grunt-contrib-coffee": "~0.7.0",
-        "grunt-contrib-watch": "~0.5.3",
-        "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-copy": "~0.4.1",
-        "grunt-contrib-compress": "~0.5.3"
+        "grunt-contrib-watch": "~0.5.3"
     }
 }
