--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "devDependencies": {
         "grunt": "~0.4.2",
+        "grunt-contrib-sass": "~0.5.1",
         "grunt-contrib-coffee": "~0.7.0",
         "grunt-contrib-watch": "~0.5.3"
     }
