--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,8 @@
             // extension
 
             "build/js/index.js",
-            "build/js/target.js",
+            "build/js/icons/icon_controller.js",
+            "build/js/icons/icon_view.js",
             "build/js/sites/abstract_site.js",
             "build/js/sites/stackoverflow.js",
             "build/js/sites/github.js"
@@ -33,11 +34,11 @@
         ]
     }],
     "web_accessible_resources": [
-        "lib/fonts/fontawesome-webfont.eot",
-        "lib/fonts/fontawesome-webfont.svg",
-        "lib/fonts/fontawesome-webfont.ttf",
-        "lib/fonts/fontawesome-webfont.woff",
-        "lib/fonts/FontAwesome.otf"
+        "assets/fonts/fontawesome-webfont.eot",
+        "assets/fonts/fontawesome-webfont.svg",
+        "assets/fonts/fontawesome-webfont.ttf",
+        "assets/fonts/fontawesome-webfont.woff",
+        "assets/fonts/FontAwesome.otf"
     ],
     "minimum_chrome_version": "15",
     "permissions": [
