--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,9 @@
         "16": "assets/icons/icon16.png",
         "48": "assets/icons/icon48.png",
         "128": "assets/icons/icon128.png" },
+    "browser_action": {
+        "default_icon": "assets/icons/icon38.png"
+    },
     "content_scripts": [{
         "matches": ["<all_urls>"],
         "run_at": "document_end",
