--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
     },
     "content_scripts": [{
         "matches": ["<all_urls>"],
-        "run_at": "document_end",
+        "run_at": "document_start",
         "js": [
 
             // lib
