Added namespacing js

--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,7 @@
 
             // extension
 
+            "build/js/namespaces.js",
             "build/js/index.js",
             "build/js/icons/icon_view.js",
             "build/js/sites/abstract_site_model.js",
