--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,19 @@
     "name": "DevGib",
     "version": "0.0.1",
     "manifest_version": 2,
-    "description": "Analyze the quality of dev-related links before accessing them",
+    "description": "Analyzes the quality of dev-related links before accessing them.",
     "icons": {
         "16": "assets/icons/icon16.png",
         "48": "assets/icons/icon48.png",
         "128": "assets/icons/icon128.png" },
+    "background": {
+        "scripts": [
+            "build/js/background.js"
+        ],
+	    "persistent": false
+    },
     "browser_action": {
+        "default_title": "DevGib",
         "default_icon": "assets/icons/icon38.png"
     },
     "content_scripts": [{
