Added basic support for caching and span size

--- a/manifest.json
+++ b/manifest.json
@@ -32,6 +32,7 @@
 
             "build/js/namespaces.js",
             "build/js/index.js",
+            "build/js/services/cache.js",
             "build/js/icons/icon_controller.js",
             "build/js/icons/icon_view.js",
             "build/js/sites/abstract_site_model.js",
