--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,8 @@
 
             "build/js/namespaces.js",
             "build/js/index.js",
-            "build/js/services/cache.js",
+            "build/js/services/cache_service.js",
+            "build/js/services/throttle_service.js",
             "build/js/icons/icon_controller.js",
             "build/js/icons/icon_view.js",
             "build/js/sites/abstract_site_model.js",
