Playing around with HAML

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "0.0.1",
     "devDependencies": {
         "grunt": "~0.4.2",
+        "grunt-contrib-watch": "~0.5.3",
         "grunt-contrib-sass": "~0.5.1",
         "grunt-contrib-coffee": "~0.7.0",
-        "grunt-contrib-watch": "~0.5.3"
+        "grunt-contrib-haml": "~0.1.1"
     }
 }
