--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
     },
     "browser_action": {
         "default_title": "DevGib",
-        "default_icon": "assets/icons/icon38.png"
+        "default_icon": "assets/icons/icon38.png",
+        "default_popup": "build/html/popup.html"
     },
     "content_scripts": [{
         "matches": ["<all_urls>"],
