Commuication between background and content works

--- a/manifest.json
+++ b/manifest.json
@@ -42,6 +42,7 @@
             // lib
             "lib/js/jquery-2.0.3.min.js",
             "lib/js/underscore-1.5.2.min.js",
+            "lib/js/underscore.string-2.3.0.min.js",
 
             // extension
             "build/js/content/namespaces.js",
