--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "grunt-contrib-watch": "~0.5.3",
         "grunt-contrib-sass": "~0.5.1",
         "grunt-contrib-coffee": "~0.7.0",
-        "grunt-contrib-haml": "~0.1.1"
+        "grunt-contrib-haml": "~0.1.1",
+        "grunt-contrib-compress": "~0.7.0"
     }
 }
