--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "DevGib",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "manifest_version": 2,
-    "description": "Analyzes the quality of dev-related links before accessing them.",
+    "description": "Analyzes the quality of programming-related links before accessing them.",
     "icons": {
         "16":  "assets/icons/icon16.png",
         "48":  "assets/icons/icon48.png",
