--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "DevGib",
     "version": "0.1.3",
     "manifest_version": 2,
-    "description": "Analyzes the quality of programming-related links before accessing them.",
+    "description": "Shows ranking for programming-related resources in the web based on their popularity and quality.",
     "icons": {
         "16":  "assets/icons/icon16.png",
         "48":  "assets/icons/icon48.png",
